CacheStorage: caches.match with bad cacheName should resolve with undefined.

Make caches.match(request, options)'s promise resolve with undefined (rather
than reject) when options.cacheName is given but no corresponding Cache object
is found.

Related spec issue:
  https://github.com/slightlyoff/ServiceWorker/issues/891

BUG=610349

Review-Url: https://codereview.chromium.org/2161423003
Cr-Commit-Position: refs/heads/master@{#406817}

Former-commit-id: 9916998beca540fc96101352626d49fd0193dca8